<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="16dp">

        <ImageView
            android:id="@+id/iv_profile_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_profile"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/john_doe"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/tv_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age_30"
            android:textSize="18sp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_john_doe_example_com"
            android:textSize="18sp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_91_23456_78901"
            android:textSize="18sp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/tv_college"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/college_example_university"
            android:textSize="18sp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_123_main_st_city_state_country"
            android:textSize="18sp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/tv_interests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interests_tech_science_business"
            android:textSize="18sp"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/btn_edit_profile_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"/>

    </LinearLayout>
</ScrollView>
